# helloman

./: CMakeLists.txt  README.md  debconf.md  helloman.desktop
debian/: changelog  config  control  copyright  helloman.install  helloman.postinst  rules  templates
src/: CMakeLists.txt  mainwindow.cpp
